2005-08-20  Youchen Lee  <youchen.lee@gmail.com>

	* src/nancy_bot/nancybot.cpp,
	src/nancy_bot/msgdata.cpp,
	src/nancy_bot/api.h,
	src/nancy_bot/msgdata.h: Fixed unclear variable and function names about
	"Bot Level".

	* data/nancy_bot/default_msg.data,
	data/nancy_bot/default.conf: Convert from big5 to utf-8.

	* src/view/telnetcon.cpp: Use SendString() to send utf-8 strings.

2005-08-20  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/view/telnetcon.cpp: CTelnetCon::OnNewIncomingMessage now receives
	UTF-8 encoded strings as parameter.

2005-08-20  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/core/termview.cpp,
	src/view/telnetview.cpp,
	src/mainframe.cpp,
	src/appconfig.cpp,
	src/generalprefpage.cpp:
	Greatly enhance hyperlink handling of the terminal screen.
	Now, E-mail addresses can be opened by mail client programs, 
	and telnet:// URLs can be opened directly in pcmanx by one click.
	(CTermView::OnHyperlinkClicked): Added and overriden by CTelnetView to 
	handle hyprelinks.

2005-08-15  Youchen Lee  <youchen.lee@gmail.com>

	* src/core/termview.cpp: Fixed a common bug, when URL includes "&", the
	command to open URL in browser will be seen as background execution.

2005-08-14  Youchen Lee  <youchen.lee@gmail.com>

	* confiure.ac: Added a line to show if support NancyBot or not after
	running ./configure.
	
	* src/configfile.cpp: Appending slash fixed.
	
	* src/view/telnetcon.cpp: Replace SendString() with SendRawString() to
	send big5 strings.

	* src/nancy_bot/nancybot.cpp,
	src/nancy_bot/standalone.cpp: Changed the initial value of msg_out.
	
2005-08-13  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/notifier/notifier-impl.c
	(_strreplace): Removed since it's not used in newly written code.
	All invalid markup characters passed to GtkLabel should be escaped
	by g_markup_escape_text() function provided by glib, not our own
	helper function like _strreplace.

2005-08-12  Jim Huang  <jserv@kaffe.org>
